footer and minor fixes to the homepage

--- a/index.html
+++ b/index.html
@@ -21,17 +21,15 @@
         <main class="row justify-content-center">
             <section class="col-sm-12 col-md-12 col-xl-8">
                 <h3>Mais vendidos</h3>
-                <div id="productList" class="d-flex flex-wrap justify-content-center">
+                <div id="productList" class="d-flex flex-wrap justify-content-center product-session">
                 </div>
             </section>
 
-            <section class="col-12 text-center">
-                <!-- about -->
+            <section class="col-sm-12 col-md-10 col-xl-8 text-center">
                 <h2 class="sub-title">Somos uma plataforma que conecta</h2>
                 <p class="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pellentesque faucibus scelerisque. Morbi eu nunc magna. Quisque congue, leo vel egestas tincidunt, justo odio pulvinar odio, ac tempus purus leo eget augue. Donec lectus magna,
                     aliquam sed tortor in, posuere egestas lorem. Duis nec diam ut mi vehicula pretium vel id ipsum. Aliquam sollicitudin sodales nibh ut pellentesque. Integer tristique mauris purus, sit amet condimentum erat lobortis eu. Integer ut lorem
-                    euismod, rutrum neque ac, egestas lacus. Sed lacinia, nunc a aliquet consequat, urna ex interdum lacus, quis lacinia dolor nibh ac magna. Maecenas felis odio, viverra hendrerit risus molestie, bibendum aliquet lorem. Nulla facilisi.
-                    Nullam gravida vestibulum aliquet. Vestibulum et tristique risus. Proin et rhoncus magna. Sed cursus a nunc eu iaculis.</p>
+                    euismod, rutrum neque ac, egestas lacus.</p>
             </section>
 
             <section class="col-sm-12 col-md-12 col-xl-8">
@@ -40,10 +38,12 @@
                 </div>
             </section>
         </main>
-        <footer>
-            <!-- footer w/ slogan -->
-        </footer>
     </div>
+    <footer class="navbar navbar-fixed-bottom footer-nav">
+        <div class="col-12 text-center align-content-center">
+            <p class="footer-slogan">Dividir, confiar e conquistar.</p>
+        </div>
+    </footer>
     <script src="ongs.js"></script>
     <script src="items.js"></script>
     <script src="index.js"></script>
