--- a/index.html
+++ b/index.html
@@ -26,22 +26,16 @@
             </section>
 
             <section class="col-sm-12 col-md-10 col-xl-8 text-center">
-                <h2 class="sub-title">Somos uma plataforma que conecta</h2>
+                <h2 class="sub-title">Somos uma <span>plataforma</span> que <span>conecta</span>.</h2>
                 <p class="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pellentesque faucibus scelerisque. Morbi eu nunc magna. Quisque congue, leo vel egestas tincidunt, justo odio pulvinar odio, ac tempus purus leo eget augue. Donec lectus magna,
                     aliquam sed tortor in, posuere egestas lorem. Duis nec diam ut mi vehicula pretium vel id ipsum. Aliquam sollicitudin sodales nibh ut pellentesque. Integer tristique mauris purus, sit amet condimentum erat lobortis eu. Integer ut lorem
                     euismod, rutrum neque ac, egestas lacus.</p>
-            </section>
-
-            <section class="col-sm-12 col-md-12 col-xl-8">
-                <h3 class="partners">Parceiros</h3>
-                <div id="ongList" class="d-flex flex-wrap justify-content-center">
-                </div>
             </section>
         </main>
     </div>
     <footer class="navbar navbar-fixed-bottom footer-nav">
         <div class="col-12 text-center align-content-center">
-            <p class="footer-slogan">Dividir, confiar e conquistar.</p>
+            <p class="footer-slogan">DIVIDIR, CONFIAR E CONQUISTAR.</p>
         </div>
     </footer>
     <script src="ongs.js"></script>
