--- a/index.html
+++ b/index.html
@@ -9,27 +9,29 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700,800|Roboto:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
+    <script src="https://kit.fontawesome.com/7b2b8b660e.js"></script>
 </head>
 
 <body>
     <div class="container">
         <header class="row">
-            <h1 class="col-12 text-center">
+            <h1 class="logo text-center col-sm-8">
                 <img src="./src/images/logo.png" alt="logo" class="logo img-responsive" />
             </h1>
+            <div class="col-sm-4">
+                <i class="fas fa-shopping-cart cart"></i>
+            </div>
         </header>
         <main class="row justify-content-center">
+            <section class="col-sm-12 col-md-10 col-xl-8">
+                <h2 class="sub-title">Somos uma <span class="green-text">plataforma</span> que <span class="pink-text">conecta</span>.</h2>
+                <h2 class="sub">Aproveite o melhor da nossa <span class="green-text">plataforma</span>.</h2>
+                <p class="about">Escolha o seu produto.<br /> Escolha o valor que queira pagar.<br /> Doe um valor para a nossa ONG parceira <strong class="name">Instituto C</strong> e apoie a <strong class="name">CONECTA Co.</strong> com o valor que deseja.</strong>
+                </p>
+            </section>
             <section class="col-sm-12 col-md-12 col-xl-8">
-                <h3>Mais vendidos</h3>
                 <div id="productList" class="d-flex flex-wrap justify-content-center product-session">
                 </div>
-            </section>
-
-            <section class="col-sm-12 col-md-10 col-xl-8 text-center">
-                <h2 class="sub-title">Somos uma <span>plataforma</span> que <span>conecta</span>.</h2>
-                <p class="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pellentesque faucibus scelerisque. Morbi eu nunc magna. Quisque congue, leo vel egestas tincidunt, justo odio pulvinar odio, ac tempus purus leo eget augue. Donec lectus magna,
-                    aliquam sed tortor in, posuere egestas lorem. Duis nec diam ut mi vehicula pretium vel id ipsum. Aliquam sollicitudin sodales nibh ut pellentesque. Integer tristique mauris purus, sit amet condimentum erat lobortis eu. Integer ut lorem
-                    euismod, rutrum neque ac, egestas lacus.</p>
             </section>
         </main>
     </div>
@@ -38,7 +40,6 @@
             <p class="footer-slogan">DIVIDIR, CONFIAR E CONQUISTAR.</p>
         </div>
     </footer>
-    <script src="ongs.js"></script>
     <script src="items.js"></script>
     <script src="index.js"></script>
 </body>
