--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
 </head>
 
 <body>
-    <div class="container">
-        <header class="row">
-            <h1 class="logo text-center col-sm-8">
-                <img src="./src/images/logo.png" alt="logo" class="logo img-responsive" />
+    <header class="d-flex justify-content-between align-content-center">
+        <div class="row">
+            <h1 class="logo text-center">
+                <img src="./src/images/logo.png" alt="logo" class="logo img-responsive ml-5" />
             </h1>
-            <div class="col-sm-4">
-                <i class="fas fa-shopping-cart cart"></i>
-            </div>
-        </header>
+        </div>
+        <div class="icon">
+            <i class="fas fa-shopping-cart cart img-responsive mr-5"></i>
+        </div>
+    </header>
+    <div class="container">
         <main class="row justify-content-center">
             <section class="col-sm-12 col-md-10 col-xl-8">
                 <h2 class="sub-title">Somos uma <span class="green-text">plataforma</span> que <span class="pink-text">conecta</span>.</h2>
@@ -40,6 +42,9 @@
             <p class="footer-slogan">DIVIDIR, CONFIAR E CONQUISTAR.</p>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="items.js"></script>
     <script src="index.js"></script>
 </body>
