requisição de compra com split

--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -30,7 +30,7 @@
       </div>
       <p>Detalhes:</p>
       <section id="cart"></section>
-      <p class="">TOTAL A PAGAR:</p>
+      <p>TOTAL A PAGAR: <span id="total-amount"></span></p>
     </div>
     <section id="credit-card-info"></section>
     <div class="d-flex flex-column">
