--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 </head>
 
 <body>
-    <header class="d-flex justify-content-between align-content-center">
-        <div class="row">
-            <h1 class="logo text-center">
-                <img src="./src/images/logo.png" alt="logo" class="logo img-responsive ml-5" />
-            </h1>
-        </div>
-        <div class="icon">
-            <i class="fas fa-shopping-cart cart img-responsive mr-5"></i>
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="wrapper">
+                    <img src="./src/images/logo.png" alt="logo" class="logo img-responsive" />
+                </div>
+                <div class="icon">
+                    <i class="fas fa-shopping-cart cart img-responsive"></i>
+                </div>
+            </div>
         </div>
     </header>
     <div class="container">
